1.首頁type8, 9 overflow bug fix

--- a/PJDesign_Front_Stage/wwwroot/styles/pages/home-index.scss
+++ b/PJDesign_Front_Stage/wwwroot/styles/pages/home-index.scss
@@ -283,6 +283,7 @@
 
     &__type8 {
         @include type-padding;
+        overflow-x: hidden;
 
         &-title {
             @include type-title;
@@ -337,6 +338,7 @@
 
     &__type9 {
         @include type-padding;
+        overflow-x: hidden;
 
         &-title {
             @include type-title;
